z-index fixed

--- a/styles/components/_nav.scss
+++ b/styles/components/_nav.scss
@@ -47,7 +47,7 @@
         color: $white;
         right: 30px;
         bottom: 30px;
-        z-index: 15;
+        z-index: 2096;
 
         @media screen and (min-width: 720px) {
           display: none;
@@ -61,7 +61,7 @@
         width: 280px;
         height: 100vh;
         box-shadow: 0 0 10px #ddd;
-        z-index: 10;
+        z-index: 1048;
         top: 0;
         
         &.active {
